scam (1.1)

  * fixed gc bug in while function
  * changed ScamArgs not to include 'scam' and scam options

scam (1.0)

  * fixed string conversion bug for items like (cons 2 3)
  * fixed pretty print conversion bug for items like (cons 2 3)
  * fixed another gc string bug
  * fixed bug caused by assumption that 0 is the same as (int *)0 on amd64 (it is not)
  * add -g option for changing the gc display status
  * added a compile-library function to the pretty (print) library

scam (0.1.9)

  * fixed string and array bug in compile function (compile.lib)
  * reorganized the reflection and compile libraries
  * added a compile-library function to the reflection library
  * fixed a gc string bug (introduced by the fix in 0.1.7)

scam (0.1.8)

  * moved defined? from reflection library to main library
  * fixed bug in length so that length of empty list returns zero
  * removed file name and line number asserts from cons (check why)
  * all read functions now return END_OF_INPUT symbol if file is already at EOF
  * scam now takes command-line arguments

scam (0.1.7)

  * added redefine, prior, and priorDefinition to reflection.lib
  * reflection.lib is no longer included by main.lib
  * folded clone.lib into reflection.lib
  * added primitives lineNumber and fileName
  * added assoc to main.lib
  * added the ability to gc arrays 
  * fixed gc string bug - now strings are gc'd in a contiguous fashion

scam (0.1.6)

  * can now parse an empty file
  * added the string coercion function
  * removed non-variadic versions of and, or
  * updated inherit.lib to reflect new object organization
  * added ++ and -- operators
  * added pretty.lib for pretty printing code

scam (0.1.5)

  * changed environment predefineds to __context, __level, __label, etc.
  * detects formal parameters that are not symbols
  * (- 3) now returns -3, for example
  * dot operator now chains, as in (. obj x y z) equals (. (. (. obj x) y) z)

scam (0.1.4)
