@@ -1,7 +1,5 @@
 (define __builtin __context)
 (define __main-lib this)
-(define (id x) x)
-(define (__id x) x)
 (define nil? null?)
 (define (valid? x) (not (null? x)))
 (define (head x) (car x))
@@ -311,12 +309,24 @@
 
 (define (sqrt x) (expt x 0.5))
 
-(define (cons-stream # a $b)
-    (cons a (lambda () (eval $b #)))
-    )
-
 (define (stream-car s) (car s))
-(define (stream-cdr s) ((cdr s)))
+
+(define (stream-cdr s)
+    (define scdr (cdr s))
+    (define scddr (cdr scdr))
+    (cond
+        ((null? (car scddr)) (car scdr))
+        (else
+            (set-car! scdr (apply eval scdr))
+            (set-car! scddr nil)
+            (car scdr)
+            )
+        )
+    )
+;(define (stream-cdr s) (apply eval (cdr s)))   ; non-memoizing
+    
+(define (cons-stream # a $b) (list a $b #))
+
 (define (stream-null? s) (null? s))
 
 (define (code $s) $s)
@@ -391,7 +401,7 @@
         )
     )
 
-(define (thunk code environment) this)
+(define (thunk code environment) (define memo #f) this)
 (define (thunk? item) (is? item 'thunk))
 (define (force item) (eval (. item code) (. item environment)))
 (define . dot)
