@@ -1,20 +1,28 @@
+(include "random.lib")
+
+(define count 1)
 (define (go)
-    (scope (include "../assoc.s"))
-    (scope (include "../apply.s"))
-    (scope (include "../a.s"))
-    (scope (include "../block.s"))
-    (scope (include "../call.s"))
-    (scope (include "../chain.s"))
-    (scope (include "../common.s"))
-    (scope (include "../common2.s"))
-    (scope (include "../common3.s"))
-    (scope (include "../common4.s"))
-    (scope (include "../defined.s"))
-    (scope (include "../delay.s"))
-    (scope (include "../except.s"))
-    (scope (include "../extend.s"))
-    (scope (include "../extension.s"))
-    (scope (include "../arrays.s"))
+    (define a (allocate (randomRange 1 10000)))
+    (define actions (array
+        (lambda () (include "../assoc.s"))
+        (lambda () (include "../apply.s"))
+        (lambda () (include "../a.s"))
+        (lambda () (include "../block.s"))
+        (lambda () (include "../call.s"))
+        (lambda () (include "../chain.s"))
+        (lambda () (include "../common.s"))
+        (lambda () (include "../common2.s"))
+        (lambda () (include "../common3.s"))
+        (lambda () (include "../common4.s"))
+        (lambda () (include "../defined.s"))
+        (lambda () (include "../delay.s"))
+        (lambda () (include "../except.s"))
+        (lambda () (include "../extend.s"))
+        (lambda () (include "../extension.s"))
+        (lambda () (include "../arrays.s"))
+        ))
+    ((getElement actions (randomRange 0 (length actions))))
+    (inspect (getElement a (randomRange 0 (length a))))
     (go)
     )
 (go)
