@@ -128,6 +128,7 @@ Linux or the Mac OS.
 \include{inheritance}
 \include{parameter-passing}
 \include{override}
+\include{main}
 \include{random}
 %\include{more-functions}
 %\include{loops}
